--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.localization": "1.4.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.probuilder": "5.2.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
