--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.localization": "1.4.5",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.probuilder": "5.2.2",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.6",
