--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.localization": "1.4.5",
+    "com.unity.memoryprofiler": "1.1.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.probuilder": "5.2.2",
     "com.unity.progrids": "3.0.3-preview.6",
